Bug 417977 - Nothing changes if "Icon View" is selected in "Configure" window
Summary: Nothing changes if "Icon View" is selected in "Configure" window
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Nate Graham
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-21 10:05 UTC by Patrick Silva
Modified: 2020-09-23 20:35 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-02-21 10:05:43 UTC
STEPS TO REPRODUCE
1. open kinfocenter
2. click on hamburger button beside search field > Configure
3. select Icon View, click on "Ok" button

OBSERVED RESULT
nothing changes, side bar view is still active

EXPECTED RESULT
Icon View option should work or be removed.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.68.0
Qt Version: 5.14.1
Comment 1 Nate Graham 2020-02-22 03:30:44 UTC
Not sure we even need to have these settings.
Comment 2 Nate Graham 2020-02-22 05:55:36 UTC
Patch: https://phabricator.kde.org/D27565
Comment 3 Nate Graham 2020-03-13 19:44:23 UTC
Git commit 3d515026d59c663fef2db26663acad40292eb5fc by Nate Graham.
Committed on 13/03/2020 at 19:44.
Pushed by ngraham into branch 'master'.

Hide configure action in Info center mode

Summary:
There's nothing to configure, so hide the action that shows the configuration window.
Related: bug 417981
FIXED-IN: 5.19.0

Test Plan:
Open Info Center
Click on hamburger menu
No more {nav Configure...} menu item

Reviewers: #plasma, mart, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: davidedmundson, broulik, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D27565

M  +4    -0    app/SettingsBase.cpp

https://commits.kde.org/systemsettings/3d515026d59c663fef2db26663acad40292eb5fc
Comment 4 Nate Graham 2020-09-23 20:35:56 UTC
Git commit 8060235a74b8d1f9f2b3558066d69ac3569b1caf by Nate Graham.
Committed on 23/09/2020 at 20:35.
Pushed by ngraham into branch 'Plasma/5.18'.

Hide configure action in Info center mode

Summary:
There's nothing to configure, so hide the action that shows the configuration window.
Related: bug 417981
FIXED-IN: 5.18.2

Test Plan:
Open Info Center
Click on hamburger menu
No more {nav Configure...} menu item

Reviewers: #plasma, mart

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D27565

M  +5    -0    app/SettingsBase.cpp
M  +38   -11   sidebar/SidebarMode.cpp

https://invent.kde.org/plasma/systemsettings/commit/8060235a74b8d1f9f2b3558066d69ac3569b1caf