Hide configure action in Info center mode

Summary:
There's nothing to configure, so hide the action that shows the configuration window.

BUG: 417977
BUG: 417981
FIXED-IN: 5.18.2

Test Plan:
Open Info Center
Click on hamburger menu
No more {nav Configure...} menu item

Reviewers: #plasma, mart

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D27565